fix menu overflow

--- a/assets/scss/objects/_menu-list.scss
+++ b/assets/scss/objects/_menu-list.scss
@@ -126,3 +126,7 @@ p.menu-list__item-desc {
 		border: 2px solid $accent;
 	}
 }
+
+.article__content {
+	overflow: hidden;
+}
